Fixed z-index stacking issue

--- a/wcfsetup/install/files/style/ui/message.scss
+++ b/wcfsetup/install/files/style/ui/message.scss
@@ -1,4 +1,8 @@
 .messageList {
+	> li {
+		position: relative;
+	}
+	
 	&:not(.messageReducedList) {
 		@include screen-md-up {
 			border-top: 1px solid $wcfContentBorder;
@@ -47,6 +51,10 @@
 		
 		@include screen-md-down {
 			margin-top: -52px;
+			
+			& + li {
+				z-index: -1;
+			}
 			
 			&::after {
 				height: 52px;
